--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,6 @@
     "paper-item": "PolymerElements/paper-item#~1.0.2",
     "iron-pages": "PolymerElements/iron-pages#~1.0.3",
     "paper-material": "PolymerElements/paper-material#~1.0.1",
-    "more-routing": "Polymore/more-routing#~1.0.0"
+    "page": "page.js#~1.6.4"
   }
 }
